--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-primary">
   <div class="container">
-    <a class="navbar-brand" href="/"><h2 class="">News Portal</h2></a>
+    <a class="navbar-brand" routerLink="" routerLinkActive="router-link-active"
+      ><h2 class="m-0">News Portal</h2></a
+    >
     <button
       class="navbar-toggler"
       type="button"
@@ -19,9 +21,9 @@
         <li class="nav-item active">
           <a
             class="nav-link"
-            [routerLink]="['/country', 'all']"
+            [routerLink]="['/country', 'ca']"
             routerLinkActive="router-link-active"
-            >Home <span class="sr-only">(current)</span></a
+            >CANADA <span class="sr-only">(current)</span></a
           >
         </li>
         <li class="nav-item">
