--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,1 +1,10 @@
-<p>news works!</p>
+<section class="intro">
+  <div class="intro__text">News Portal</div>
+  <a
+    class="nav-link"
+    [routerLink]="['/country', 'ca']"
+    routerLinkActive="router-link-active"
+  >
+    <button class="intro__btn" type="button">explore news</button>
+  </a>
+</section>
